@@ -952,6 +952,7 @@ Localization
         #LOC_BDArmory_MaxOffBoresight = Max Off Boresight
         #LOC_BDArmory_DetonationDistanceOverride = Detonation Distance Override
         #LOC_BDArmory_DetonateAtMinimumDistance = Detonate At Min Dist
+        #LOC_BDArmory_UseStaticMaxLaunchRange = Dynamic/Static Max Range
         #LOC_BDArmory_ProximityTriggerDistance = Warhead Detonation Dist
         #LOC_BDArmory_clustermissileTriggerDistance = Submunition Launch Distance
         #LOC_BDArmory_DropTime = Drop Time
@@ -1058,6 +1059,9 @@ Localization
         
         #LOC_BDArmory_false = False
         #LOC_BDArmory_true = True
+
+        #LOC_BDArmory_dynamic = Dynamic
+        #LOC_BDArmory_static = Static
         
         #LOC_BDArmory_AddedCost = Added cost
         #LOC_BDArmory_AddedMass = Safety Systems Mass
